<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.4</version>
        <relativePath/>
    </parent>

    <groupId>com.globe</groupId>
    <artifactId>safetynet</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>safetynet</name>
    <description>safetynet</description>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <jacoco.version>0.8.12</jacoco.version>
        <surefire.version>3.2.5</surefire.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-log4j2</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>

            <!-- Plugin Surefire -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <!-- Utiliser @{argLine} au lieu de ${argLine} -->
                    <argLine>
                        @{argLine}
                        -XX:+EnableDynamicAgentLoading
                        -Djdk.instrument.traceUsage=false
                        -Xshare:off
                    </argLine>
                </configuration>
            </plugin>

            <!-- Plugin Surefire Report -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>${surefire.version}</version>
                <executions>
                    <execution>
                        <id>generate-test-report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report-only</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Plugin JaCoCo -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <!-- Définir la propriété argLine pour Surefire -->
                            <propertyName>argLine</propertyName>
                            <!-- Exclusions au niveau de l'agent -->
                            <excludes>
                                <exclude>sun/**</exclude>
                                <exclude>jdk/**</exclude>
                                <exclude>java/**</exclude>
                                <exclude>javax/**</exclude>
                                <exclude>com/sun/**</exclude>
                                <exclude>com/globe/safetynet/interceptor/RequestLoggingInterceptor*</exclude>
                                <exclude>com/globe/safetynet/dtos/*</exclude>
                                <exclude>com/globe/safetynet/entities/*</exclude>
                                <exclude>com/globe/safetynet/config*/*</exclude>
                                <exclude>com/globe/safetynet/SafetynetApplication*</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <excludes>
                                <exclude>com/globe/safetynet/interceptor/RequestLoggingInterceptor*</exclude>
                                <exclude>com/globe/safetynet/dtos/*</exclude>
                                <exclude>com/globe/safetynet/entities/*</exclude>
                                <exclude>com/globe/safetynet/config*/*</exclude>
                                <exclude>com/globe/safetynet/SafetynetApplication*</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
